# GB_Emulator

./: CMakeLists.txt  main.c
BUS/: bus.c  bus.h
CART/: cartridge.c  cartridge.h
CPU/: cpu.c  cpu.h
Instructions/: instruction.h
